--- a/src/404.html
+++ b/src/404.html
@@ -55,6 +55,6 @@
   </head>
   <body>
     <h1>NOT FOUND PAGE</h1>
-    <a href="/" rel="home">HOME</a>
+    <a href="/" rel="home">back to HOME</a>
   </body>
 </html>
